--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -64,12 +64,23 @@
 			color: var(--white-color);
 			font-size: 1.25rem;
 			padding: 6px;
-			display: grid;
-			place-items: center;
+
+			display: flex;
+			align-items: center;
+			justify-content: center;
+
+			width: 30px;
+			height: 30px;
+			aspect-ratio: 1 / 1;
+
 			transition: background-color 0.3s;
 
 			&:hover {
 				background-color: var(--black-color);
+			}
+			i {
+				display: inline-block;
+				line-height: 1;
 			}
 		}
 	}
